# tap-jotform

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  logging.jotform.yaml  meltano.yml  noxfile.py  pyproject.toml  requests_cache.config.json  tox.ini
.github/: dependabot.yml  semantic.yml
.github/workflows/: constraints.txt  dynamic-publish.yaml  test.yml
tap_jotform/: __init__.py  __main__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
