[build-system]
requires = ["poetry-core>=1.1.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.black]
line-length = 88

[tool.poetry]
name = "tap-jotform"
version = "0.0.0"
description = "Singer tap for Jotform, built with the Meltano SDK for Singer Taps."
license = "Apache-2.0"
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
maintainers = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/edgarrmondragon/tap-jotform"
repository = "https://github.com/edgarrmondragon/tap-jotform"
documentation = "https://github.com/edgarrmondragon/tap-jotform/#readme"
keywords = ["ELT", "Jotform"]

[tool.poetry.dependencies]
colorama = "==0.4.6"
importlib-metadata = {version = "<5.0.0", python = "<3.8"}
python = "<3.12,>=3.7.1"
requests-cache = "==1.0.1"
singer-sdk = "==0.23.0"
structlog = "==22.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"

[tool.poetry.scripts]
# CLI declaration
tap-jotform = 'tap_jotform.tap:TapJotform.cli'

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""
metadata = true
style = "pep440"
vcs = "git"

[tool.ruff]
ignore = ["ANN101", "DJ", "PD"]
line-length = 88
select = ["ALL"]
src = ["tap_jotform", "tests", "noxfile.py"]
target-version = "py37"

[tool.ruff.isort]
known-first-party = ["tap_jotform"]

[tool.ruff.per-file-ignores]
"noxfile.py" = ["ANN"]
"tests/*" = ["ANN"]

[tool.ruff.pydocstyle]
convention = "google"
