[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = [
  "poetry-core>=1.1",
  "poetry-dynamic-versioning",
]

[tool.poetry]
name = "tap-jotform"
version = "0.0.0"
description = "Singer tap for Jotform, built with the Meltano SDK for Singer Taps."
license = "Apache-2.0"
authors = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
maintainers = ["Edgar Ramírez-Mondragón <edgarrm358@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/edgarrmondragon/tap-jotform"
repository = "https://github.com/edgarrmondragon/tap-jotform"
documentation = "https://github.com/edgarrmondragon/tap-jotform/#readme"
keywords = ["ELT", "Jotform"]

[tool.poetry.dependencies]
python = ">=3.8"
colorama = "==0.4.*"
requests-cache = "==1.2.*"
singer-sdk = "==0.35.*"
structlog = "==24.1.*"

[tool.poetry.group.dev.dependencies]
pytest = "==8.*"
singer-sdk = { version = "==0.35.*", extras = ["testing"] }

[tool.poetry.scripts]
# CLI declaration
tap-jotform = 'tap_jotform.tap:TapJotform.cli'

[tool.poetry-dynamic-versioning]
enable = true
format-jinja = """
    {%- if distance == 0 -%}
        {{ serialize_pep440(base, stage, revision) }}
    {%- elif revision is not none -%}
        {{ serialize_pep440(base, stage, revision + 1, dev=distance, metadata=[commit]) }}
    {%- else -%}
        {{ serialize_pep440(bump_version(base), stage, revision, dev=distance, metadata=[commit]) }}
    {%- endif -%}
"""
metadata = true
style = "pep440"
vcs = "git"

[tool.ruff]
line-length = 88
src = ["tap_jotform", "tests", "noxfile.py"]
target-version = "py38"

[tool.ruff.lint]
ignore = ["ANN101", "DJ", "PD", "COM812", "ISC001"]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_jotform"]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN"]
"tests/*" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
addopts = [
    "-vvv",
]
